Fix input always marked at red on Firefox.

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -175,6 +175,14 @@ header {
   cursor: pointer;
 }
 
+input:invalid {
+  box-shadow: none;
+}
+
+textarea:invalid {
+  box-shadow: none;
+}
+
 .edit-product {
   color: #0F990F;
   font-size: 18px;
